# h2engine

./: .travis.yml  CMakeLists.txt  README.md  h2.conf  h2.workspace  h2engine.cbp  h2engine.depend  h2engine.layout  h2workerlua.cbp  main.js  main.lua  main.php  main.py
engine/: main.cpp
fflib/base/: anytype.h  arg_helper.h  atomic_op.h  daemon_tool.h  event_bus.cpp  event_bus.h  ffslot.h  fftype.h  func.h  gencode.py  lock.cpp  lock.h  log.cpp  log.h  obj_pool.h  os_tool.h  osdef.h  perf_monitor.cpp  perf_monitor.h  performance_daemon.cpp  performance_daemon.h  signal_helper.h  singleton.h  smart_ptr.h  str_tool.h  strtool.h  task.h  task_queue.h  task_queue_i.h  task_queue_impl.h  thread.cpp  thread.h  time_tool.h  timer_service.h  timer_service_win.h
fflib/db/: db_ops.h  ffdb.cpp  ffdb.h  mysql_ops.cpp  mysql_ops.h  sqlite3.h  sqlite3ext.h  sqlite_ops.cpp  sqlite_ops.h
fflib/net/: acceptor.h  acceptor_linux.cpp  acceptor_linux.h  acceptortcp.cpp  acceptortcp.h  base_heartbeat.h  codec.cpp  codec.h  connector.h  epoll.cpp  event_loop.h  ffnet.h  ioevent.h  ioevent_epoll.cpp  ioevent_epoll.h  ioevent_select.cpp  ioevent_select.h  message.h  msg_handler.h  msg_sender.h  net_factory.h  net_stat.cpp  net_stat.h  netbase.h  select.cpp  select.h  socket.h  socket_ctrl.h  socket_ctrl_common.cpp  socket_ctrl_common.h  socket_linux.cpp  socket_op.h  socket_protocol.h  socket_win.cpp  socket_win.h  sockettcp.cpp  sockettcp.h  udp_socket.h  wsprotocol.h
fflib/net/acceptorimpl/: acceptor_linux.cpp  acceptor_linux.h  acceptor_linux_gate.cpp  acceptor_linux_gate.h
fflib/net/ctrlimpl/: socket_ctrl_common.cpp  socket_ctrl_common.h  socket_ctrl_gate.cpp  socket_ctrl_gate.h
fflib/net/eventloopimpl/: epoll.cpp  epoll.h  select.cpp  select.h
fflib/net/socketimpl/: socket_linux.cpp  socket_linux.h  socket_win.cpp  socket_win.h
fflib/python/: ffpython.cpp  ffpython.h
fflib/rpc/: ffbroker.cpp  ffbroker.h  ffrpc.cpp  ffrpc.h  ffrpc_msg.thrift  ffrpc_ops.h  rpcbase.h
fflib/rpc/msg_def/: ffrpc_msg_constants.cpp  ffrpc_msg_constants.h  ffrpc_msg_types.cpp  ffrpc_msg_types.h
fflib/server/: cmd_util.cpp  cmd_util.h  db_mgr.cpp  db_mgr.h  entity.cpp  entity.h  ffgate.cpp  ffgate.h  fftask_processor.h  ffworker.cpp  ffworker.h  http_mgr.cpp  http_mgr.h  prop.h  script.h  script_cache.h  shared_mem.cpp  shared_mem.h  shared_mem_win.cpp
fflib/server/gen-cpp/: msg_constants.cpp  msg_constants.h  msg_types.cpp  msg_types.h
fflib/xml/: ffxml.cpp
lib3party/mysqlinc/mysql/: keycache.h  my_config.h  my_pthread.h  my_sys.h  mysql.h  mysql_version.h  mysqld_ername.h  mysqld_error.h  sql_state.h
lib3party/mysqllib/: libmysql.lib  libmysqld.lib  mysqlservices.lib
lib3party/php/TSRM/: TSRM.h
lib3party/php/Zend/: zend_ini.h  zend_virtual_cwd.h
lib3party/php/ext/iconv/: php_iconv.h
lib3party/php/ext/pdo/: php_pdo_error.h
lib3party/php/ext/standard/: file.h  html_tables.h  php_filestat.h  (+1 more)
lib3party/php/main/: SAPI.h  build-defs.h  php_config.h
lib3party/thrift/: FFThrift.h  Thrift.h  ThriftConfig.h
lib3party/thrift/protocol/: TBinaryProtocol.h  TProtocol.h  TVirtualProtocol.h
lib3party/thrift/transport/: FFTransport.h  TTransport.h  TTransportException.h
log/2019-02-17/: log.1  log.2  log.3
src/: foo.js  game.thrift  main.js  main.php  setup.cpp
src/chat/: chat.cpp  chat.h
src/common/: cmdmgr.cpp  cmdmgr.h  common_def.h  entity.cpp  entity.h  game_event.h  prop.h
src/game/: entity.h  game_event.h  player_service.cpp
src/item/: item.cpp  item.h
src/map/: map.cpp  map.h
src/npc/: npc.cpp  npc.h
src/player/: cmd_player.cpp  cmd_player.h  db_player.cpp  db_player.h  player.cpp  player.h  player_service.cpp
src/skill/: PlayerModel.py  SkillCalculatorBase.py  SkillCalculatorFaShi.py  SkillModel.py  skill.cpp  skill.h
src/task/: task.cpp  task.h
src/workerphp/: ffworker_php.h
tool/: Makefile.example
tool/h2client/: index.htm
winbuild/: h2.workspace  h2.workspace.layout  h2engine.cbp  h2engine.depend  h2engine.layout  h2workercpp.cbp  h2workercpp.depend  h2workercpp.layout  h2workerlua.cbp  h2workerlua.depend  h2workerlua.layout  h2workerpy.cbp  h2workerpy.depend  h2workerpy.layout
winbuild/include/: luna.hpp
winbuild/include/curl/: curl.h
winbuild/include/mysql/: mysqld_error.h
winbuild/log/2019-02-24/: log.1  log.2
windependency/include/curl/: curlver.h  multi.h
windependency/include/mysql/: mysqld_ername.h
windependency/include/openssl/: opensslconf.h
workercpp/: ffworker_cpp.cpp  ffworker_cpp.h  main.cpp
workercs/: Makefile  Pbmsg.cs  acceptor.cs  main.cs  workercs.csproj  workercs.sln
workercs/fflib/: acceptor.cs  cfgtool.cs  csvtool.cs  dbmgr.cs  dbops.cs  entity.cs  event_bus.cs  ffbroker.cs  ffnet.cs  ffrpc.cs  ffsocket.cs  gate.cs  log.cs  mysqlops.cs  perf.cs  pyscript.cs  task_queue.cs  util.cs  worker.cs  wsprotocol.cs
workercs/fflib/RpcMsg/: BrokerRouteMsgReq.cs  EmptyMsgRet.cs  GateBroadcastMsgToSessionReq.cs  GateChangeLogicNodeReq.cs  GateCloseSessionReq.cs  GateRouteMsgToSessionReq.cs  RegisterToBrokerReq.cs  RegisterToBrokerRet.cs  RouteLogicMsgReq.cs  SessionEnterWorkerReq.cs  SessionOfflineReq.cs  VarData.cs  WorkerCallMsgReq.cs  WorkerCallMsgRet.cs
workercs/lib3party/mysql/: MySQL.Data.EntityFrameworkCore.xml  MySql.Data.xml  MySql.Web.xml
workercs/src/: Pbmsg.cs  game_util.cs  monster.cs  player.cs  role.cs
workercs/thrift/Net35/: ExtensionsNet35.cs
workercs/thrift/Protocol/: TBinaryProtocol.cs  TCompactProtocol.cs  TJSONProtocol.cs  TProtocol.cs
workercs/thrift/Server/: TSimpleServer.cs  TThreadPoolServer.cs  TThreadedServer.cs
workercs/thrift/Transport/: TBufferedTransport.cs  TFramedTransport.cs  THttpClient.cs  TMemoryBuffer.cs  TServerSocket.cs  TSocket.cs  TStreamTransport.cs  TTransport.cs
workercsharp/: acceptor.cs  ffnet.cs  ffrpc.cs  main.cs  netops.cs
workerjs/: ffworker_js.cpp  ffworker_js.h  main.cpp
workerlua/: ffworker_lua.cpp  ffworker_lua.h  luaops.h  main.cpp
workerphp/: ffworker_php.cpp  ffworker_php.h  main.cpp
workerpy/: ffworker_python.cpp  ffworker_python.h  main.cpp
(+7 files in other folders)
